@@ -1,0 +1,6 @@
+#!/usr/bin/make -f
+
+include /usr/share/cdbs/1/class/ant.mk
+
+%:
+	dh $*
